[gd_scene load_steps=3 format=2]

[ext_resource path="res://preset/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Navigation2D/Charcter.gd" type="Script" id=2]

[node name="KinematicBody2D" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]
current = true

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
